--- a/index.ipynb
+++ b/index.ipynb
@@ -68,7 +68,7 @@
    "outputs": [],
    "source": [
     "greenville_population = None # change None\n",
-    "greenville_population # 84554"
+    "greenville_population = greenvile # 84554"
    ]
   },
   {
