Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -92,12 +92,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "greenville_area = None\n",
-    "greenville_area = gre"
+    "greenville_area = greenville['Area']\n"
    ]
   },
   {
