--- a/index.ipynb
+++ b/index.ipynb
@@ -92,12 +92,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "68"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "greenville_area = None\n",
-    "greenville_area = greenville['Area']\n"
+    "greenville_area = greenville['Area']\n",
+    "greenville_area"
    ]
   },
   {
